test/libsolidity/syntaxTests/storageLayoutSpecifier/address.sol
contract C layout at address(0x1234) {}
// ----
// TypeError 6396: (21-36): The base slot of the storage layout must evaluate to a rational number.
